objects/LLC_BI__Covenant_Product__c.object
<CustomObject>
    <description>Covenant and Product Link Object</description>
    <fields>
        <fullName>LLC_BI__Covenant2__c</fullName>
        <description>Covenant Product Master-Detail Relationship to Covenant</description>
        <inlineHelpText>Covenant Product Master-Detail Relationship to Covenant</inlineHelpText>
        <label>Covenant2</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Covenant Products</relationshipLabel>
        <relationshipName>Covenant_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>Available Product Lines</description>
        <inlineHelpText>Available Product Lines</inlineHelpText>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                    <default>true</default>
                    <label>Start</label>
                </value>
                <value>
                    <fullName>SBA Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>Available Product Types</description>
        <inlineHelpText>Available Product Types</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7(a)</fullName>
                </value>
                <value>
                    <fullName>Conventional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>Available Products</description>
        <inlineHelpText>Available Products</inlineHelpText>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Covenant Product</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Covenant Product  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covenant Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>